RESOLVED FIXED155830
[OS X] Overflow:scroll scrollbars do not obey overlay/always-on system preference changes
https://bugs.webkit.org/show_bug.cgi?id=155830
Summary [OS X] Overflow:scroll scrollbars do not obey overlay/always-on system prefer...
Myles C. Maxfield
Reported 2016-03-23 21:33:20 PDT
[OS X] Overflow:scroll scrollbars do not obey overlay/always-on system preference changes
Attachments
Patch (10.10 KB, patch)
2016-03-23 21:56 PDT, Myles C. Maxfield
simon.fraser: review+
Myles C. Maxfield
Comment 1 2016-03-23 21:56:52 PDT
Simon Fraser (smfr)
Comment 2 2016-03-23 22:12:42 PDT
Comment on attachment 274816 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=274816&action=review > Source/WebCore/rendering/RenderLayer.cpp:2926 > + renderer().setNeedsLayout(MarkContainingBlockChain); Isn't MarkContainingBlockChain the default? > Source/WebCore/rendering/RenderLayer.cpp:2927 > + renderer().view().layout(); Ouch. Please don't do a sync layout here.
Myles C. Maxfield
Comment 3 2016-03-24 19:03:26 PDT
Note You need to log in before you can comment on or make changes to this bug.